Assignment7/src/TestParser.jj
options {
  DEBUG_PARSER=true;
}

PARSER_BEGIN(Logo)
import java.io.*;

public class Logo 
{
  public static void main(String[] args) 
    throws Exception 
  {
    Reader reader = new FileReader(args[0]);
    Logo parser = new Logo(reader);
    
    parser.Program();
 }
}
PARSER_END(Logo)

SKIP : {
  " " 
}

TOKEN : {
    <FORWARD : "FORWARD">
  | <RIGHT   : "RIGHT">
  | <DIGITS  : (["1"-"9"])+ (["0"-"9"])*>
  | <EOL     : "\r" | "\n" | "\r\n">
  | <ERROR   : ~["\r", "\n"]>
}

void Program() : {} 
{
  (
    try {
        MoveForward() {System.out.println("Processed Move FORWARD");}
      | TurnRight()   {System.out.println("Processed Turn RIGHT");}
      | Error()       {handleError(token);}
    }
    catch (ParseException ex) {
      handleError(ex.currentToken);
    }
  )+ 
}

void MoveForward() : {} 
{
  <FORWARD> <DIGITS> (<EOL> | < EOF >)
}

void TurnRight() : {} 
{
  <RIGHT> <DIGITS> (<EOL> | < EOF >)
}

void Error() : {}
{
  <ERROR>
}

JAVACODE
String handleError(Token token)
{
  System.out.println("*** ERROR: Line " + token.beginLine +
                     " after \"" + token.image + "\"");

  Token t;
  
  do {
    t = getNextToken();
  } while (t.kind != EOL && t.kind != EOF);
  
  return t.image;
}
